--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,15 @@
     <color name="colorPrimary">#492DE9</color>
     <color name="colorPrimaryDark">#454AB3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="purple">#c86dd7</color>
+
+
+    <color name="colorPrimaryHome">#fff</color>
+    <color name="colorPrimaryDarkHome">#fff</color>
+    <color name="colorAccentHome">#03DAC5</color>
+
+    <color name="colorRed">#EF5350</color>
+    <color name="colorGreen">#45C232</color>
+    <color name="color_background">#FAFCFF</color>
 </resources>
