--- a/app/src/main/res/layout/mk_settings.xml
+++ b/app/src/main/res/layout/mk_settings.xml
@@ -288,7 +288,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:text="Altera Passwrd"
+        android:text="Alterar senha"
         android:textColor="@color/colorText"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton12"
         app:layout_constraintStart_toEndOf="@+id/imageButton12"
@@ -358,7 +358,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:text="Darkmode"
+        android:text="Modo noturno"
         android:textColor="@color/colorText"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton8"
         app:layout_constraintStart_toEndOf="@+id/imageButton8"
