--- a/app/src/main/res/layout/transaction_fragment.xml
+++ b/app/src/main/res/layout/transaction_fragment.xml
@@ -44,7 +44,7 @@
                 android:layout_marginLeft="32dp"
                 android:layout_marginTop="32dp"
                 android:fontFamily="monospace"
-                android:text="Receita"
+                android:text="Crédito"
                 android:textColor="@color/colorText"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -58,7 +58,7 @@
                 android:layout_marginEnd="32dp"
                 android:layout_marginRight="32dp"
                 android:fontFamily="monospace"
-                android:text="Despesa"
+                android:text="Débito"
                 android:textColor="@color/colorText"
                 android:textSize="20sp"
                 android:textStyle="bold"
