--- a/app/src/main/res/layout/mk_card.xml
+++ b/app/src/main/res/layout/mk_card.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="250dp"
+    android:id="@+id/mk_card"
     android:elevation="5dp"
     app:cardCornerRadius="16dp"
     app:cardElevation="5dp">
